tests/implicit_coercion_specifiers_wrap_swap.test
let _ = fun[C] implicit{C: _ R} (Q: ({x: int} => C), R: (C => {x: int})) -> 0;
//let _ = fun[C[+]] implicit{C: _ Q} (Q: ([T]. {x: T} => C[T]), R: ([T]. C[T] => {x: T})) -> 0;
####
TypeError: Invalid implicit coercion definition. Input type does not match specified type.
let _ = fun[C] implicit{C: _ R} (Q: ({x: int} => C), R: (C => {x: int})) -> 0;
                             ^                                                 
//let _ = fun[C[+]] implicit{C: _ Q} (Q: ([T]. {x: T} => C[T]), R: ([T]. C[T] => {x: T})) -> 0;
